# flexitracker

./: .gitignore  CLAUDE.md  README.md
.claude/commands/: release.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  decommission.yml  deploy-prod.yml  deploy-qa.yml  provision-access.yml  release.yml
backend/: package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
backend/e2e/: fixtures.data.mjs  fixtures.mjs  smoke.mjs
backend/src/: env.ts  identity.ts  index.ts  mail.ts  registry.ts  schema.ts  tenant-do.ts
backend/src/ui/: client-helpers.ts  render.ts
backend/src/worktime/: interval.ts  settings.ts  time.ts  worktime.ts
backend/test/: client-helpers.test.ts  interval.test.ts  schema.test.ts  settings.test.ts  time.test.ts  worktime.test.ts
backend/tools/: decommission.mjs  seed.mjs  setup-access-app.mjs  setup-access-bypass.mjs
daemon/: Cargo.toml
daemon-py/: README.md  pyinstaller_entry.py  pyproject.toml
daemon-py/install/: README.md  flexitracker.service  install.ps1  install.sh
daemon-py/src/flexitracker/: __init__.py  _backend.py  cli.py  config.py  core.py  idle.py  outbox.py  sender.py  state_machine.py  version.py
daemon-py/tests/: test_config.py  test_conformance.py  test_idle.py  test_outbox.py  test_sender_body.py
daemon-py/tests/vectors/: 01-activation-debounced-backdated.json  02-idle-backdated-to-last-input.json  03-short-break-absorbed.json  04-brief-activity-debounced.json  05-sustained-return-backdated.json  06-heartbeats-while-active.json  07-recover-after-sudden-shutdown.json  08-locked-session-goes-idle.json  09-recover-anchors-later-evidence.json  10-suspend-longer-closes-span.json  11-suspend-with-immediate-wake.json  12-suspend-shorter-absorbed.json  13-backwards-clock-watermark.json  14-small-forward-clock-absorbed.json  15-recover-from-active-matches-loop.json  16-explicit-close-no-double-close.json  17-freshness-independent-of-poll.json  18-short-reading-pause.json  19-presence-must-be-sustained.json  20-gap-kills-pending-return.json  21-idle-backdating-exact.json  22-min-inactivity-exact-boundary.json  23-large-timestamps.json  24-all-kinds-lowercase.json
daemon/crates/flexi-core/: Cargo.toml
daemon/crates/flexi-daemon/: Cargo.toml
daemon/crates/flexitracker-core/: Cargo.toml
daemon/crates/flexitracker-daemon/: Cargo.toml
daemon/crates/flexitracker-daemon/src/: config.rs  main.rs  outbox.rs  sender.rs  state_machine.rs
daemon/install/: README.md  flexi-worker.iss  flexi-worker.service  flexitracker.iss  flexitracker.service  install.ps1
daemon/install/linux/: install.sh
docs/: wire-schema.md
ui/: index.html
(+103 files in other folders)
